// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dark theme should match snapshot 1`] = `
<a
  class="bg-bg py-2.5 px-5 rounded-l-sm"
  href="/edit?runnerId=1&name=George+Washington&grade=5&lapCount=100"
>
  1
</a>
`;

exports[`dark theme should render with no name prop 1`] = `
<a
  class="bg-bg py-2.5 px-5 rounded-l-sm"
  href="/edit?runnerId=1&grade=N%2FA&lapCount=100"
>
  1
</a>
`;

exports[`light theme should match snapshot 1`] = `
<a
  class="bg-bg py-2.5 px-5 rounded-l-sm"
  href="/edit?runnerId=1&name=George+Washington&grade=5&lapCount=100"
>
  1
</a>
`;

exports[`light theme should render with no name prop 1`] = `
<a
  class="bg-bg py-2.5 px-5 rounded-l-sm"
  href="/edit?runnerId=1&grade=N%2FA&lapCount=100"
>
  1
</a>
`;
